--- a/helm/quetzal/values.yaml
+++ b/helm/quetzal/values.yaml
@@ -26,7 +26,7 @@ app:
   # general pod configuration
   image:
     repository: eu.gcr.io/quetzal/quetzal/app
-    tag: 0.4.0-dev
+    tag: 0.4.0
     pullPolicy: Always
   resources:
     limits:
@@ -64,7 +64,7 @@ worker:
 db:
   image:
     repository: eu.gcr.io/quetzal/quetzal/db
-    tag: 0.4.0-dev
+    tag: 0.4.0
     pullPolicy: Always
   resources:
     limits:
@@ -85,7 +85,7 @@ db:
 rabbitmq:
   image:
     repository: eu.gcr.io/quetzal/quetzal/rabbitmq
-    tag: 0.4.0-dev
+    tag: 0.4.0
     pullPolicy: Always
   resources:
     limits:
