--- a/helm/acme-issuer.yaml
+++ b/helm/acme-issuer.yaml
@@ -8,7 +8,7 @@
        # server: https://acme-staging-v02.api.letsencrypt.org/directory
        server:  https://acme-v02.api.letsencrypt.org/directory
        # Email address used for ACME registration
-       email: quetzal.api@gmail.com
+       email: david@omind.me
        # Name of a secret used to store the ACME account private key
        privateKeySecretRef:
          name: letsencrypt-certificate-secrets
