--- a/helm/quetzal/values.yaml
+++ b/helm/quetzal/values.yaml
@@ -7,14 +7,14 @@ fullnameOverride: ""
 
 # General configuration
 general:
-  adminMail: quetzal.api@gmail.com
-  serverName: sandbox.quetz.al
-  credentialsSecret: sandbox-credentials-secrets
-  dataBucket: gs://quetzal-sandbox-data
-  backupBucket: gs://quetzal-sandbox-backups
+  adminMail: david@omind.me
+  serverName: quetzal.omind.me
+  credentialsSecret: production-credentials-secrets
+  dataBucket: gs://quetzal-prod-data
+  backupBucket: gs://quetzal-prod-backups
 
 ingress:
-  tlsSecret: sandbox-tls-secret
+  tlsSecret: production-tls-secret
 
 # Retained disk configuration (for database disk)
 storage:
@@ -25,25 +25,22 @@ storage:
 app:
   # general pod configuration
   image:
-    repository: eu.gcr.io/quetzal/quetzal/app
+    repository: eu.gcr.io/quetzal-omind/quetzal/app
     tag: 0.4.0
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   resources:
     limits:
       memory: 4Gi
       cpu: 1000m
     requests:
       memory: 256Mi
-      cpu: 250m
+      cpu: 100m
   nodeSelector: {}
   tolerations: []
   affinity: {}
 
   # app/worker specific configuration
-  flask_env: staging
-  data_bucket: gs://quetzal-sandbox-data
-  backup_bucket: gs://quetzal-sandbox-backups
-  credentials_secret_name: sandbox-credentials-secrets
+  flask_env: production
 
   # Other configuration entries that should not be set here. They should be
   # set using --set key=value when doing helm install:
@@ -56,23 +53,23 @@ worker:
       cpu: 1000m
     requests:
       memory: 256Mi
-      cpu: 250m
+      cpu: 100m
   nodeSelector: {}
   tolerations: []
   affinity: {}
 
 db:
   image:
-    repository: eu.gcr.io/quetzal/quetzal/db
+    repository: eu.gcr.io/quetzal-omind/quetzal/db
     tag: 0.4.0
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   resources:
     limits:
-      memory: 4Gi
+      memory: 1Gi
       cpu: 1000m
     requests:
-      memory: 128Mi
-      cpu: 250m
+      memory: 64Mi
+      cpu: 100m
   nodeSelector: {}
   tolerations: []
   affinity: {}
@@ -84,9 +81,9 @@ db:
 
 rabbitmq:
   image:
-    repository: eu.gcr.io/quetzal/quetzal/rabbitmq
+    repository: eu.gcr.io/quetzal-omind/quetzal/rabbitmq
     tag: 0.4.0
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   resources:
     limits:
       memory: 256Mi
