Add modifications for development environment on omind

--- a/helm/quetzal/Chart.yaml
+++ b/helm/quetzal/Chart.yaml
@@ -6,4 +6,4 @@ description: A RESTful API designed to store data files and manage their associa
 home: https://quetz.al
 maintainers:
   - name: David Ojeda
-    email: quetzal.api@gmail.com
+    email: david@omind.me
