--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
     # logs
-    access_log /var/log/access.log;
-    error_log /var/log/error.log;
+    # access_log /var/log/access.log;
+    # error_log /var/log/error.log;
 
     listen 80;
     server_name local.quetz.al;
@@ -13,8 +13,8 @@ server {
 
 server {
     # logs
-    access_log /var/log/access.log;
-    error_log /var/log/error.log;
+    # access_log /var/log/access.log;
+    # error_log /var/log/error.log;
 
     listen 443 ssl;
     server_name local.quetz.al;
