--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,18 +68,12 @@ toml = "^0.10.0"
 
 
 [tool.poetry.dev-dependencies]
-docker = "^3.7.1"
-pytest = "^4.3.1"
-pytest-mock = "^1.10.1"
-coverage = "^4.5.3"
-
-
-# Prepared requirements for next iteration when we update all dependencies
-#docker = "^4.2.0"
-#pytest = "^5.4.1"
-#pytest-mock = "^2.0.0"
-#pytest-docker = "^0.7.2"
-#coverage = "^5.0.4"
+docker = "^4.2.0"
+pytest = "^5.4.1"
+pytest-mock = "^2.0.0"
+pytest-docker = "^0.7.2"
+coverage = "^5.0.4"
+pytest-cov = "^2.8.1"
 
 
 [build-system]
