--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -64,6 +64,8 @@ services:
       QUETZAL_FILE_DATA_DIR: /mnt/data
       QUETZAL_FILE_USER_DATA_DIR: /mnt/workspaces
       # KOMBU_LOG_CONNECTION: 1  # Useful to debug kombu bug
+      PYTHONBREAKPOINT: ipdb.set_trace
+      LOGGING_CONSOLE_LEVEL: DEBUG
     volumes:
       # Setup a volume for development: it allows the web container to have the
       # latest changes so one does not need to build everytime there is a
@@ -82,8 +84,8 @@ services:
     ports:
       - "5000:5000"
     # # Maybe needed to attach with docker-compose run --service-ports web command
-    # # stdin_open: true
-    # tty: true
+    stdin_open: true
+    tty: true  # keep this to enable debugging through "docker attach ..."
 
   worker:
     build:
