--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,9 @@ pytest-mock = "^2.0.0"
 pytest-docker = "^0.7.2"
 coverage = "^5.0.4"
 pytest-cov = "^2.8.1"
+ipython = "^7.13.0"
+ipdb = "^0.13.2"
+flask-shell-ipython = "^0.4.1"
 
 
 [build-system]
