--- a/helm/quetzal/templates/app-deployment.yaml
+++ b/helm/quetzal/templates/app-deployment.yaml
@@ -57,7 +57,7 @@ spec:
             - name: USE_GUNICORN
               value: "1"
             - name: DB_HOST
-              value: "db"
+              value: {{ .Values.db.host }}
             - name: DB_PORT
               value: "5432"
             - name: DB_DATABASE
