--- a/helm/quetzal/values.yaml
+++ b/helm/quetzal/values.yaml
@@ -5,17 +5,6 @@
 nameOverride: ""
 fullnameOverride: ""
 
-# General configuration
-general:
-  adminMail: david@omind.me
-  serverName: dev.omind.quetz.al
-  credentialsSecret: devel-credentials-secrets
-  dataBucket: gs://data.dev.omind.quetz.al
-  backupBucket: gs://backups.dev.omind.quetz.al
-  bucketDomain: dev.omind.quetz.al
-
-ingress:
-  tlsSecret: devel-tls-secret
 
 # Retained disk configuration (for database disk)
 storage:
@@ -41,7 +30,8 @@ app:
   affinity: {}
 
   # app/worker specific configuration
-  flask_env: development
+  flask_env: production
+  flaskSecretKey: +L!129XBD7VI_YJ+
 
   # Other configuration entries that should not be set here. They should be
   # set using --set key=value when doing helm install:
@@ -59,21 +49,21 @@ worker:
   tolerations: []
   affinity: {}
 
-db:
-  image:
-    repository: eu.gcr.io/quetzal-omind/dev/quetzal/db
-    tag: 0.5.1
-    pullPolicy: Always
-  resources:
-    limits:
-      memory: 1Gi
-      cpu: 1000m
-    requests:
-      memory: 64Mi
-      cpu: 100m
-  nodeSelector: {}
-  tolerations: []
-  affinity: {}
+#db:
+#  image:
+#    repository: eu.gcr.io/quetzal-omind/dev/quetzal/db
+#    tag: 0.5.1
+#    pullPolicy: Always
+#  resources:
+#    limits:
+#      memory: 1Gi
+#      cpu: 1000m
+#    requests:
+#      memory: 64Mi
+#      cpu: 100m
+#  nodeSelector: {}
+#  tolerations: []
+#  affinity: {}
 
   # Other configuration entries that should not be set here. They should be
   # set using --set key=value when doing helm install:
