--- a/helm/quetzal/templates/ingress.yaml
+++ b/helm/quetzal/templates/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/proxy-body-size: 4G
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    certmanager.k8s.io/issuer: "letsencrypt-issuer"
+    cert-manager.io/issuer: "letsencrypt-issuer"
 spec:
   rules:
     - host: {{ .Values.domain }}
